<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <LinearLayout
        android:id="@+id/layout_volume_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:text="@string/video_edit_voice"
            android:textAlignment="center"/>
        <ImageView
            android:id="@+id/iv_volume_change_save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp30"
            android:layout_margin="@dimen/dp10"
            android:background="@drawable/icon_video_change_ok"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp100"
        android:layout_below="@id/layout_volume_change"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="#80000000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/dp15"
                android:text="@string/video_voice_source"/>

            <SeekBar
                android:id="@+id/sb_volume_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginEnd="@dimen/dp6"
                android:max="100"
                android:progress="50"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/dp15"
                android:text="@string/video_voice_background"/>

            <SeekBar
                android:id="@+id/sb_volume_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginEnd="@dimen/dp6" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>