<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/video_crop_background">

    <!-- 视频显示页面 -->
    <com.cgfay.video.widget.VideoTextureView
        android:id="@+id/video_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <!-- back -->
    <ImageView
        android:id="@+id/video_crop_back"
        android:layout_width="@dimen/dp25"
        android:layout_height="@dimen/dp25"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginStart="@dimen/dp10"
        android:scaleType="centerInside"
        android:background="@drawable/icon_video_crop_back"/>

    <!-- OK -->
    <Button
        android:id="@+id/video_crop_ok"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp40"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_alignParentEnd="true"
        android:background="@color/brown"
        android:textColor="@color/white"
        android:text="@string/video_crop_next"/>

    <!-- 缩略图/倍速播放 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <!-- 速度选择条 -->
        <com.cgfay.video.widget.VideoSpeedLevelBar
            android:id="@+id/video_crop_speed_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginStart="@dimen/dp25"
            android:layout_marginEnd="@dimen/dp25"
            android:visibility="gone"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10">
            <TextView
                android:id="@+id/video_crop_selected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="已选中 15.0s" />
            <TextView
                android:id="@+id/video_crop_speed_bar_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/dp15"
                android:textColor="@color/white"
                android:text="@string/video_crop_speed_bar_visible"/>
            <TextView
                android:id="@+id/video_crop_rotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/dp15"
                android:textColor="@color/white"
                android:text="角度"/>
        </LinearLayout>

        <!-- 裁剪缩略图 -->
        <com.cgfay.video.widget.VideoCropViewBar
            android:id="@+id/video_crop_view_bar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="70dp"
            android:background="@color/video_crop_bar_background"/>
    </LinearLayout>

    <!-- 视频裁剪时长选择 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_video_speed">

        <TextView
            android:id="@+id/video_crop_time_15"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/video_speed_background"
            android:text="@string/video_crop_time_15"
            android:background="@drawable/bg_video_speed_select_left"/>

        <TextView
            android:id="@+id/video_crop_time_120"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/video_crop_time_120"
            android:background="@color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_progress_round"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp"
        android:visibility="gone">
        <com.cgfay.video.widget.CircleProgressView
            xmlns:circle="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_crop_progress"
            android:layout_width="@dimen/dp60"
            android:layout_height="@dimen/dp60"
            circle:backgroundColor="@color/azure"
            circle:backgroundCircleWidth="2dp"
            circle:color="@color/yellow"
            circle:circleWidth="2dp"
            circle:textColor="@color/white"
            circle:textSize="9"
            circle:textSuffix="%"/>

        <TextView
            android:id="@+id/tv_crop_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="@color/wheat"
            android:text="@string/video_crop_progress_tips"
            android:textSize="15sp" />
    </LinearLayout>


</RelativeLayout>